oqct-app/main/default/objects/Data_Clean_Delete_Audit__c/Data_Clean_Delete_Audit__c.object-meta.xml
<CustomObject>
    <description>This object is used to track all the deletion of records in Data Clean App</description>
    <label>Data Clean Delete Audit</label>
    <nameField>
        <displayFormat>DaCl-DA-{00000000}</displayFormat>
        <label>Data Clean Delete Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Clean Delete Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>