oqct-app/main/default/objects/Data_Clean_Delete_Audit__c/fields/DC_Configuration__c.field-meta.xml
<CustomField>
    <fullName>DC_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The configuration whose result(s) is deleted</description>
    <inlineHelpText>The configuration whose result(s) is deleted</inlineHelpText>
    <label>DC-Configuration</label>
    <referenceTo>DC_Configuration__c</referenceTo>
    <relationshipLabel>Data Clean Delete Audits</relationshipLabel>
    <relationshipName>Data_Clean_Delete_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>