oqct-app/main/default/objects/Data_Clean_Delete_Audit__c/fields/DC_Result__c.field-meta.xml
<CustomField>
    <fullName>DC_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Result whose file(s) is deleted</description>
    <inlineHelpText>The Result whose file(s) is deleted</inlineHelpText>
    <label>DC-Result</label>
    <referenceTo>DC_Result__c</referenceTo>
    <relationshipLabel>Data Clean Delete Audits</relationshipLabel>
    <relationshipName>Data_Clean_Delete_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>