oqct-app/main/default/objects/Data_Clean_Delete_Audit__c/fields/Deleted_By__c.field-meta.xml
<CustomField>
    <fullName>Deleted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who deleted the record</description>
    <inlineHelpText>The user who deleted the record</inlineHelpText>
    <label>Deleted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Data_Clean_Delete_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>