oqct-app/main/default/objects/Data_Clean_Delete_Audit__c/fields/Deletion_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Deletion_DateTime__c</fullName>
    <description>The date time at which the record was deleted</description>
    <inlineHelpText>The date time at which the record was deleted</inlineHelpText>
    <label>Deletion DateTime</label>
    <type>DateTime</type>
</CustomField>