oqct-app/main/default/objects/Data_Clean_Delete_Audit__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <description>The note related to deletion</description>
    <inlineHelpText>The note related to deletion</inlineHelpText>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>