oqct-app/main/default/objects/Data_Clean_Delete_Audit__c/fields/Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Name__c</fullName>
    <description>The name of the record which was deleted</description>
    <inlineHelpText>The name of the record which was deleted</inlineHelpText>
    <label>Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>