oqct-app/main/default/objects/Data_Clean_Delete_Audit__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>The type of record or the object whose record(s) are deleted</description>
    <inlineHelpText>The type of record or the object whose record(s) are deleted</inlineHelpText>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DC-Configuration</fullName>
            </value>
            <value>
                <fullName>DC-Result</fullName>
            </value>
            <value>
                <fullName>DC-File</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>